<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#00000000"
        android:elevation="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_30sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            tools:background="@drawable/rounded_blue_corner_5"
            android:backgroundTint="@color/white">

            <ImageView
                android:id="@+id/closeDialog"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/ic_circle"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:layout_marginHorizontal="@dimen/_15ssp"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="@+id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/tajawal_mid"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/rounded_blue_corner_5"
                android:backgroundTint="#E3E2E2"
                android:padding="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:hint="@string/search"
                android:drawablePadding="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textColorHint="#ACABAB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <TextView
                android:id="@+id/more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:hint="@string/other"
                android:imeOptions="actionDone"
                android:textColor="@color/black"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:visibility="gone"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchDialog"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dialogRv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/more"
                tools:itemCount="4"
                tools:listitem="@layout/drop_down_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>