<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_75sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sp1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                app:hintTextColor="@color/black"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/categorySP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none">

                </AutoCompleteTextView>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sp2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:hint="@string/sub_category"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp1">

                <AutoCompleteTextView
                    android:id="@+id/subCategorySP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none">
                </AutoCompleteTextView>

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/processRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:itemCount="2"
                tools:listitem="@layout/process_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/sp2"
                android:layout_marginBottom="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginHorizontal="@dimen/_50sdp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/goToStaticBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/rounded_blue_corner_5"
            android:backgroundTint="@color/sub_color"
            android:text="static"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/rounded_blue_corner_5"
            android:backgroundTint="@color/main_color"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</RelativeLayout>